Bug 495895 - <search term> and HTML codes when searching
Summary: <search term> and HTML codes when searching
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: master
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Alexander Lohnau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-11-06 21:54 UTC by riclick
Modified: 2024-11-24 06:38 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Kickoff (17.12 KB, image/png)
2024-11-09 00:29 UTC, duha.bugs
Details

Note You need to log in before you can comment on or make changes to this bug.
Description riclick 2024-11-06 21:54:55 UTC
Something kinda odd happened when I tried to access KDE. So I basically searched for "helpsys" and it just spitted out random HTML code. Typing "helps" appears some applications titled as <search term>


KDE Plasma Version: 6.2.2
KDE Frameworks Version: 6.7.0
Qt Version: 6.8.0
Graphics Platform: Wayland
Comment 1 Nate Graham 2024-11-08 20:49:06 UTC
Yup, you found the inline help feature!
Comment 2 duha.bugs 2024-11-09 00:28:03 UTC
Refiling to Kickoff where the bug happens.

Steps to reproduce:
Type helpsys or ?systemsettings in Kickoff. Other help runners are also affected.
Comment 3 duha.bugs 2024-11-09 00:29:25 UTC
Created attachment 175667 [details]
Kickoff

See Image attached
Comment 4 Oded Arbel 2024-11-09 00:39:18 UTC
This is very confusing - if you type something like "helpsystem" (but not "help system"), you get an entry that says:

System Settings
<search term>
Finds system settings modules whose names or descriptions match :q:

If you select it - it replaces the search field with the text "<search terms>" - which causes the runner to find a bunch of unrelated stuff (that possibly contains the word "search" or "terms" in it) but isn't actually related to system settings.

It looks like some internal configuration that isn't supposed to be visible but is exposed in a broken way, and isn't useful at all.

Why is this accessible and what possible use does it have?
Comment 5 Bug Janitor Service 2024-11-10 14:23:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2629
Comment 6 Alexander Lohnau 2024-11-24 06:38:28 UTC
Git commit 3705ca0c8638730aa7f16b5376f06ae07eb8ede1 by Alexander Lohnau.
Committed on 24/11/2024 at 06:38.
Pushed by alex into branch 'master'.

kickoff: Fix display of multiline results

M  +1    -0    applets/kickoff/package/contents/ui/AbstractKickoffItemDelegate.qml
M  +3    -2    applets/kickoff/package/contents/ui/KickoffListDelegate.qml
M  +2    -0    applets/kickoff/package/contents/ui/KickoffSingleton.qml
M  +1    -0    applets/kickoff/package/contents/ui/PlacesPage.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/3705ca0c8638730aa7f16b5376f06ae07eb8ede1