kickoff: FIx display of multiline results

BUG: 495895